# bio-agents-mcp

./: .env  .env.docker  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
chembl-mcp/: Dockerfile  README.md
chembl-mcp/src/chembl_mcp/: server.py
chembl_mcp/: README.md
llm-client/: Dockerfile  README.md  chainlit_ui.py  client.py  pyproject.toml
llm-client/conf/: config.yaml
llm_client/: chainlit_ui.py  client.py
protein-data-bank/: Dockerfile  README.md  pyproject.toml
protein-data-bank-mcp/: README.md  pyproject.toml
protein-data-bank-mcp/src/protein_data_bank_mcp/: assembly.py  chemical_component.py  entity.py  entity_instance.py  entry.py  groups.py  interface.py  repository_holdings.py  schema.py  server.py  utils.py
protein-data-bank/conf/: config.yaml
protein-data-bank/src/protein_data_bank/: assembly.py  chemical_component.py  constants.py  entity.py  entity_instance.py  entry.py  groups.py  interface.py  main.py  repository_holdings.py  schema.py  server.py  utils.py
protein_data_bank_mcp/: README.md
protein_data_bank_mcp/src/protein_data_bank_mcp/pdb_store/: storage.py
weather-server/: Dockerfile  pyproject.toml
weather-server/src/weather/: __init__.py  server.py
